--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -7,3 +7,22 @@
 		font-family: "Commissioner", sans-serif;
 	}
 }
+
+@layer components {
+	button {
+		@apply duration-150 cursor-pointer;
+	}
+
+	input[type="range"] {
+		@apply cursor-pointer appearance-none bg-transparent rounded-full overflow-hidden;
+	}
+
+	input[type="range"]::-webkit-slider-runnable-track {
+		@apply bg-myBlue-200 rounded-full h-[14px];
+	}
+
+	input[type="range"]::-webkit-slider-thumb {
+		@apply bg-myPurple-200 shadow-[-408px_0_0_400px] shadow-myPurple-400 rounded-full h-[14px] aspect-square cursor-ew-resize appearance-none;
+		-webkit-appearance: none;
+	}
+}
